--- a/src/styles.css
+++ b/src/styles.css
@@ -63,7 +63,7 @@ body {
 
 .mobile-popup {
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   background-color: #f5f5f5;
   position: absolute;
   top: 0;
